(docs): adds swagger definitions to 'dish' controller
